--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <%= form_for (task), html: {class: "form-horizontal"} do |f| %>
-    <% task.errors.full_messages.each do |message| %>
+  <%= form_for (@task), html: {class: "form-horizontal"} do |f| %>
+    <% @task.errors.full_messages.each do |message| %>
       <div class="alert alert-danger">
         <%= message %>
       </div>
@@ -33,12 +33,13 @@
       <%= f.label :days_of_week, class: "col-sm-2 text-left" %>
       <div class="col-sm-4">
         <%= f.text_field :days_of_week, class: "form-control" %>
+        Format: mon,tue,wed,thu,fri,sat,sun
       </div>
     </div>
     <div class="form-group">
-      <%= f.label :server, class: "col-sm-2 text-left" %>
+      <%= f.label :servers, class: "col-sm-2 text-left" %>
       <div class="col-sm-4">
-        <%= f.text_field :server, class: "form-control" %>
+        <%= f.collection_select :server_ids, @servers, :id, :name, {:prompt => @select_value, :selected => @task.server_ids.any? && @task.server_ids.first } %>
       </div>
     </div>
     <div class="form-group">
