--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,4 +1,6 @@
 <div class="container-fluid">
   <h4>New Scheduled task</h4>
-  <%= render "form" %>
+  <%= form_for @task, as: :task, url: tasks_path(@task), method: :post, html: { class: "form-horizontal" } do |f| %>
+      <%= render "form", f: f %>
+  <% end %>
 </div>
