--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -37,6 +37,12 @@
     </div>
   </div>
   <div class="form-group">
+    <%= f.label :status, class: "col-sm-2 text-left" %>
+    <div class="col-sm-4">
+      <%= f.text_field :status, class: "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
     <div class="col-sm-4">
       <%= f.submit nil, class: "btn btn-success" %>
     </div>
